--- a/proj.win32/sokoban-cocos2dx.vcxproj.filters
+++ b/proj.win32/sokoban-cocos2dx.vcxproj.filters
@@ -10,16 +10,28 @@
     <Filter Include="src">
       <UniqueIdentifier>{bb6c862e-70e9-49d9-81b7-3829a6f50471}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\app">
+      <UniqueIdentifier>{1f0a567f-db7a-4215-9572-70aa18ef9cac}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\util">
+      <UniqueIdentifier>{58c282c3-6832-4335-bb00-3eb9baedd99c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\scene">
+      <UniqueIdentifier>{7d94a764-3a7b-467d-b807-aaf27023d9ed}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>win32</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\AppDelegate.cpp">
-      <Filter>src</Filter>
+      <Filter>src\app</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\CommonUtil.cpp">
+      <Filter>src\util</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\HelloWorldScene.cpp">
-      <Filter>src</Filter>
+      <Filter>src\scene</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -27,10 +39,13 @@
       <Filter>win32</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\AppDelegate.h">
-      <Filter>src</Filter>
+      <Filter>src\app</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\CommonUtil.h">
+      <Filter>src\util</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\HelloWorldScene.h">
-      <Filter>src</Filter>
+      <Filter>src\scene</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
